--- a/form_creation.html
+++ b/form_creation.html
@@ -12,7 +12,7 @@
 <!-- link to fontawesome CSS-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body style="background-color:lightblue;">
 <form>
 <table class="table-hover" style="text-align: center; border: dodgerblue">
 	<tr>
